erDiagram
    USER {
        int id PK
        varchar username
    }

    PROFILE {
        int id PK
        text bio
        varchar avatar
        int user_id FK
    }

    POST {
        int id PK
        varchar(200) title
        text content
        int view_count
        datetime created_at
        datetime updated_at
        int author_id FK
        int category_id FK
    }

    COMMENT {
        int id PK
        text text
        datetime created_at
        datetime updated_at
        int author_id FK
        int post_id FK
        int parent_id FK
    }

    TAG {
        int id PK
        varchar(50) name
    }

    CATEGORY {
        int id PK
        varchar(100) name
        varchar(255) slug
        int parent_id FK
    }

    VOTE {
        int id PK
        int value "1: Like, -1: Dislike"
        int user_id FK
        int post_id FK
    }

    USER ||--|{ PROFILE : "has"
    USER ||--o{ POST : "authors"
    USER ||--o{ COMMENT : "authors"
    USER ||--o{ VOTE : "votes"

    POST ||--o{ COMMENT : "comments"
    POST }o--o{ TAG : "tags"
    POST ||--o{ VOTE : "receives"

    CATEGORY ||--o{ POST : "contains"
    CATEGORY ||--o{ CATEGORY : "children"

    COMMENT ||--o{ COMMENT : "replies"
